@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_SSL_VERIFYSTATUS (libcurl 7.41.0+).
+
         * Added CURL_SSLVERSION_TLSv1_0, CURL_SSLVERSION_TLSv1_1
           and CURL_SSLVERSION_TLSv1_2 (libcurl 7.34.0+).
 
